--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 !*.css
 !*.js
 !static.hzshuangmei.com/img/pc/banner/news/
+!static.hzshuangmei.com/img/pc/banner/doctors/
+!static.hzshuangmei.com/img/pc/banner/project/
 *.mp4
 .txt
 .project
