--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ about/
 activity/
 brand/
 cases/
-doctors/
+/www.hzshuangmei.com/doctors/
+/m.hzshuangmei.com/doctors/
 environment/
 equipment/
 honors/
