修改错误文件
修改错误文件

--- a/ngx_conf/http2_push/www.hzshuangmei.com.http2_push.conf
+++ b/ngx_conf/http2_push/www.hzshuangmei.com.http2_push.conf
@@ -10,8 +10,8 @@ http2_push /alidata1/web/static.hzshuangmei.com/js/pc/kst_popup.js;
 # the index page
 location =/{
 
-  http2_push /alidata1/web/static.hzshuangmei.com/css/pc/index.css;		
-  http2_push /alidata1/web/static.hzshuangmei.com/js/pc/js;
+  http2_push /alidata1/web/static.hzshuangmei.com/css/pc/index.css;
+  http2_push /alidata1/web/static.hzshuangmei.com/js/pc/index.js;
 
 }
 
