http2 server push add header
http2 server push add header

--- a/ngx_conf/http2_push/m.hzshuangmei.com.http2_push.conf
+++ b/ngx_conf/http2_push/m.hzshuangmei.com.http2_push.conf
@@ -1,3 +1,12 @@
+add_header Link "<https://css.hzshuangmei.com/m/common.css>;as=\"style\";rel=\"preload\"";
+add_header Link "<https://css.hzshuangmei.com/m/site.css>;as=\"style\";rel=\"preload\"";
+add_header Link "<https://js.hzshuangmei.com/m/mobile-util.js>;as=\"script\";rel=\"preload\"";
+add_header Link "<https://js.hzshuangmei.com/m/common.js>;as=\"script\";rel=\"preload\"";
+add_header Link "<https://js.hzshuangmei.com/m/layer/mobile/layer.js>;as=\"script\";rel=\"preload\"";
+add_header Link "<https://js.hzshuangmei.com/m/NativeShare.js>;as=\"script\";rel=\"preload\"";
+add_header Link "<https://js.hzshuangmei.com/m/kst_popup.js>;as=\"script\";rel=\"preload\"";
+add_header Link "<https://js.hzshuangmei.com/m/fastclick.js>;as=\"script\";rel=\"preload\"";
+
 http2_push /alidata1/web/static.hzshuangmei.com/css/m/common.css;
 http2_push /alidata1/web/static.hzshuangmei.com/css/m/site.css;
 http2_push /alidata1/web/static.hzshuangmei.com/js/m/mobile-util.js;
