--- a/ngx_conf/http2_push/www.hzshuangmei.com.http2_push.conf
+++ b/ngx_conf/http2_push/www.hzshuangmei.com.http2_push.conf
@@ -1,4 +1,11 @@
 # the whole www.hzshuangmei.com site
+add_header Link "<https://img.hzshuangmei.com/pc/favicon.ico>;as=\"image\";rel=\"preload\"";
+add_header Link "<https://css.hzshuangmei.com/pc/common.css>;as=\"style\";rel=\"preload\"";
+add_header Link "<https://js.hzshuangmei.com/pc/layer/theme/default/layer.css>;as=\"style\";rel=\"preload\"";
+add_header Link "<https://js.hzshuangmei.com/pc/common.js>;as=\"script\";rel=\"preload\"";
+add_header Link "<https://js.hzshuangmei.com/pc/layer/layer.js>;as=\"script\";rel=\"preload\"";
+add_header Link "<https://js.hzshuangmei.com/pc/kst_popup.js>;as=\"script\";rel=\"preload\"";
+
 http2_push /alidata1/web/static.hzshuangmei.com/img/pc/favicon.ico;
 http2_push /alidata1/web/static.hzshuangmei.com/img/pc/kst/default.png;
 http2_push /alidata1/web/static.hzshuangmei.com/css/pc/common.css;
@@ -10,6 +17,9 @@ http2_push /alidata1/web/static.hzshuangmei.com/js/pc/kst_popup.js;
 # the index page
 location =/{
 
+  add_header Link "<https://css.hzshuangmei.com/pc/index.css>;as=\"style\";rel=\"preload\"";
+  add_header Link "<https://js.hzshuangmei.com/pc/index.js>;as=\"script\";rel=\"preload\"";
+
   http2_push /alidata1/web/static.hzshuangmei.com/css/pc/index.css;
   http2_push /alidata1/web/static.hzshuangmei.com/js/pc/index.js;
 
@@ -17,6 +27,9 @@ location =/{
 
 # the brand page
 location ^~/brand/ {
+
+  add_header Link "<https://css.hzshuangmei.com/pc/brandzt/theme.css>;as=\"style\";rel=\"preload\"";
+  add_header Link "<https://js.hzshuangmei.com/pc/brandzt/theme.js>;as=\"script\";rel=\"preload\"";
 
   http2_push /alidata1/web/static.hzshuangmei.com/css/pc/brandzt/theme.css;
   http2_push /alidata1/web/static.hzshuangmei.com/js/pc/brandzt/theme.js;
@@ -26,12 +39,19 @@ location ^~/brand/ {
 # the list of  the projects pages
 location ^~/projects/*$
 {
+  add_header Link "<https://css.hzshuangmei.com/pc/list_project.css>;as=\"style\";rel=\"preload\"";
+  add_header Link "<https://js.hzshuangmei.com/pc/list_project.js>;as=\"script\";rel=\"preload\"";
+
   http2_push /alidata1/web/static.hzshuangmei.com/css/pc/list_project.css;
   http2_push /alidata1/web/static.hzshuangmei.com/js/pc/list_project.js;
 }
 
 # the project landing page
 location  ^~/projects/*/*.html$ {
+
+  add_header Link "<https://css.hzshuangmei.com/pc/tjb.css>;as=\"style\";rel=\"preload\"";
+  add_header Link "<https://css.hzshuangmei.com/pc/tjb_bg.jpg>;as=\"image\";rel=\"preload\"";
+
   http2_push /alidata1/web/static.hzshuangmei.com/css/pc/tjb.css;
   http2_push /alidata1/web/static.hzshuangmei.com/img/pc/tjb_bg.jpg;
 }
@@ -39,6 +59,9 @@ location  ^~/projects/*/*.html$ {
 # the list of the doctors pages
 location ^~/doctors/*$
 {
+  add_header Link "<https://css.hzshuangmei.com/pc/list_doctors.css>;as=\"style\";rel=\"preload\"";
+  add_header Link "<https://js.hzshuangmei.com/pc/list_doctors.js>;as=\"script\";rel=\"preload\"";
+
   http2_push /alidata1/web/static.hzshuangmei.com/css/pc/list_doctors.css;
   http2_push /alidata1/web/static.hzshuangmei.com/js/pc/list_doctors.js;
 }
@@ -46,6 +69,9 @@ location ^~/doctors/*$
 # the doctor landing page
 location  ^~/doctors/*/*.html$
 {
+  add_header Link "<https://css.hzshuangmei.com/pc/tjb.css>;as=\"style\";rel=\"preload\"";
+  add_header Link "<https://css.hzshuangmei.com/pc/tjb_bg.jpg>;as=\"image\";rel=\"preload\"";
+
   http2_push /alidata1/web/static.hzshuangmei.com/css/pc/tjb.css;
   http2_push /alidata1/web/static.hzshuangmei.com/img/pc/tjb_bg.jpg;
 }
@@ -53,6 +79,9 @@ location  ^~/doctors/*/*.html$
 # the list of the cases pages
  location ^~/cases/*$
 {
+   add_header Link "<https://css.hzshuangmei.com/pc/list_case.css>;as=\"style\";rel=\"preload\"";
+   add_header Link "<https://js.hzshuangmei.com/pc/list_case.js>;as=\"script\";rel=\"preload\"";
+
    http2_push /alidata1/web/static.hzshuangmei.com/css/pc/list_case.css;
    http2_push /alidata1/web/static.hzshuangmei.com/js/pc/list_case.js;
 }
@@ -60,14 +89,21 @@ location  ^~/doctors/*/*.html$
 # the case landing page
 location  ^~/cases/*/*.html$
 {
+  add_header Link "<https://css.hzshuangmei.com/pc/article_case.css>;as=\"style\";rel=\"preload\"";
+  add_header Link "<https://css.hzshuangmei.com/pc/article_common.css>;as=\"style\";rel=\"preload\"";
+  add_header Link "<https://js.hzshuangmei.com/pc/article_common.js>;as=\"script\";rel=\"preload\"";
+
   http2_push /alidata1/web/static.hzshuangmei.com/css/pc/article_case.css;
   http2_push /alidata1/web/static.hzshuangmei.com/css/pc/article_common.css;
-   http2_push /alidata1/web/static.hzshuangmei.com/js/pc/article_common.js;
+  http2_push /alidata1/web/static.hzshuangmei.com/js/pc/article_common.js;
 }
 
 # the list of the news pages
  location ^~/news/*$
 {
+   add_header Link "<https://css.hzshuangmei.com/pc/list_news.css>;as=\"style\";rel=\"preload\"";
+   add_header Link "<https://js.hzshuangmei.com/pc/list_news.js>;as=\"script\";rel=\"preload\"";
+
    http2_push /alidata1/web/static.hzshuangmei.com/css/pc/list_news.css;
    http2_push /alidata1/web/static.hzshuangmei.com/js/pc/list_news.js;
 }
@@ -75,6 +111,9 @@ location  ^~/cases/*/*.html$
 # the news landing page
 location  ^~/news/*/*.html$
 {
+  add_header Link "<https://css.hzshuangmei.com/pc/article_common.css>;as=\"style\";rel=\"preload\"";
+  add_header Link "<https://js.hzshuangmei.com/pc/article_common.js>;as=\"script\";rel=\"preload\"";
+
   http2_push /alidata1/web/static.hzshuangmei.com/css/pc/article_common.css;
   http2_push /alidata1/web/static.hzshuangmei.com/js/pc/article_common.js;
 }
