--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,21 @@
 !*.php
 !*.css
 !*.js
+!www.hzshuangmei.com/data/
+!m.hzshuangmei.com/data/
+!www.hongzhuangmr.cn/data/
+!m.hongzhuangmr.cn/data/
+!xzh.hzshuangmei.com/data/
+!www.hzshuangmei.com/include/
+!m.hzshuangmei.com/include/
+!www.hongzhuangmr.cn/include/
+!m.hongzhuangmr.cn/include/
+!xzh.hzshuangmei.com/include/
+!www.hzshuangmei.com/houtai/
+!m.hzshuangmei.com/houtai/
+!www.hongzhuangmr.cn/houtai/
+!m.hongzhuangmr.cn/houtai/
+!xzh.hzshuangmei.com/houtai/
 *.mp4
 .txt
 .project
@@ -18,7 +33,6 @@ composer.json
 !xapp/templets/admin/*.xml
 /www.hzshuangmei.com/a/
 /m.hzshuangmei.com/a/
-data/
 about/
 activity/
 brand/
