增加忽略目录
增加忽略目录

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,13 @@ cache/
 tplcache/
 sessions*/
 !kst.html
+axunge/
+breast/
+embroidery/
+eye/
+nose/
+genitalia/
+injection/
+laser/
+liposculpture/
+
